2008-06-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-00
	* converter: python fix by Ulf

2008-06-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-00
	* add data.PrescaleTable
	* use data.PrescaleTable in gui.PrescaleDialog
	* make OnlineConverter return data.PrescaleTable
	* NOTE: data.PrescaleTable only works with CMSSW_2_1_0_pre3 and
	later!
	* fix/improve gui.OutputModuleDialog

2008-05-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-11
	* fix bug reported by JR regarding the diff gui dialog

2008-05-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-10
	* add additional checks for forbidden symbols in the configuration
	name in the GUIs SaveConfiguration dialog.

2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-09
	* revert to old default regarding --cff (namely implying
	--noedsources and --nooutput)
	
2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-08
	* gui: make sure to always keep trigger information
	  (OutputModuleEditor)
	* data/converter: provide --nosequences and --nomodules options in
	ModifierInstructions

2008-05-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-07
	* 'fix' problem with configuration parser, where strings
	containing '#' characters wouldn't be parsed correctly. It isn't
	pretty though ...

2008-05-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-06
	* allow for configurations to be saved even if unset tracked
	parameters are in it.

2008-05-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-23-05
	* add converter.summary.data
	* implement converter.summary.ascii

2008-04-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-04
	* changed my mind; use HLT DEVELOPMENT for the tutorial, Define
	TEST2R & TEST9R
	